// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correct render ExpensesSummary with 1 expense  1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;

exports[`Should correct render ExpensesSummary with multiple expenses  1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses
     totalling 
    $23,534.35
  </h2>
</div>
`;
